# secure-backup

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: cli.md  crypto.md  spec.md
docs/formats/: sb01.md  sb02.md  sb03-draft.md
python/secure_backup/: cli.py  crypto.py  kdf.py  parser.py  paths.py  streaming.py
python/secure_backup/formats/: sb01.py  sb02.py
scripts/: generate_vector.py
test_vectors/: metadata.json  sample.enc  sample.txt
tests/: test_cli.py  test_crypto.py  test_parser.py  test_paths.py  test_sb02.py
