[project]
name = "secure-backup"
version = "0.2.0"
description = "CLI for local file encryption and decryption"

authors = [
    { name = "JoseeMelk" }
]

requires-python = ">=3.10"

dependencies = [
    "cryptography"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = ["python"]
addopts = "-v"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]